# anti-virus-projeto

./: .coveragerc  .flake8  .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  GUIA_INICIO.md  IMPROVEMENT_PLAN.md  PLANO_TRABALHO.md  README.md  REDESIGN_PLAN.md  Virus_project.py  build_exe.spec  clamav.py  config.py  excel_exporter.py  exclusion_matcher.py  exclusions.json  gui.py  gui2.py  gui3.py  gui_filters.py  hash_cache.py  index.html  launch.json  main.py  mkdocs.yml  notifications.py  pyproject.toml  rate_limiter.py  report_generator.py  requirements.txt  scan_history.py  scheduler.py  setup.py  signatures.json  test_excel_exporter.py  test_exclusion_matcher.py  (+17 more)
.github/workflows/: deploy.yml  tests.yml
docs/: index.md
docs/about/: license.md  session-summary.md
docs/api/: engine.md  reference.md  support.md  web.md
docs/architecture/: architecture.md  development.md
docs/contribute/: guidelines.md  roadmap.md  structure.md
docs/guides/: faq.md  how-it-works.md  installation.md  quickstart.md  troubleshooting.md
docs/stylesheets/: extra.css
templates/: report.css  report.html
