[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antivirus-projeto"
version = "1.0.0"
description = "Educational antivirus scanning engine demonstrating cybersecurity basics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nekas1980"},
]
keywords = [
    "antivirus",
    "malware",
    "security",
    "education",
    "cybersecurity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "colorama>=0.4.4",
    "requests>=2.28.0",
]

[project.optional-dependencies]
gui = ["customtkinter>=5.0"]
notifications = ["plyer>=2.1"]
excel = ["openpyxl>=3.1"]
api = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
dev = [
    "coverage[toml]>=7.0",
    "black>=22.0",
    "flake8>=5.0",
    "bandit[toml]>=1.7",
    "safety>=3.0",
    "mypy>=0.990",
]

[project.scripts]
antivirus-scan = "Virus_project:main"
antivirus-scheduler = "scheduler:main"
antivirus-update = "virustotal_updater:main"

[project.urls]
"Homepage" = "https://github.com/Nekas1980/anti-virus-projeto"
"Bug Tracker" = "https://github.com/Nekas1980/anti-virus-projeto/issues"
"Source" = "https://github.com/Nekas1980/anti-virus-projeto"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "test_*.py",
    "setup.py",
    "main.py",
    "gui.py",
    "web_api.py",
    "build_exe.spec",
    "venv/*",
    ".venv/*",
    "site/*",
    "output/*",
    "docs/*",
    "quarantine/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise SystemExit",
]
fail_under = 80
show_missing = true
precision = 1

[tool.bandit]
exclude_dirs = ["test_*", "venv", ".venv", "site", "output", "quarantine", "__pycache__"]
skips = ["B101"]  # assert_used (tests usam assert)
